fix stretch

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -12,7 +12,7 @@ body {
     flex: 1 1 0;
 }
 img {
-    width: 100%;
+    max-width: 100vw;
     max-height: 95vh;
     object-fit: contain;
 }
